# cold-data-serve

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yaml
cold_search_core/: Cargo.toml
cold_search_core/schema/: metadata.fbs
cold_search_core/src/: config_v2.rs  filter.rs  lib.rs  schema.fbs  schema_generated.rs
indexer/: Cargo.toml
indexer/src/: main.rs  pipeline.rs  query_builder.rs
server/: Cargo.toml
server/src/: main.rs
