[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
cold_search_core = { path = "../cold_search_core" }
duckdb = { version = "1.1.1", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
h3o = "0.5"
roaring = "0.10"
fst = "0.4"
deunicode = "0.4"
planus = "1.1.0"
rayon = "1.8"
chrono = "0.4"
