[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
cold_search_core = { path = "../cold_search_core" }
tokio = { version = "1.32", features = ["full"] }
arc-swap = "1.6"
notify = "6.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
roaring = "0.10"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
